# second-brain-synapse

./: .gitignore  LICENSE  README.md  config.ini.template  pyproject.toml
src/: __main__.py  custom_types.py  project_indexer.py  utils.py
