[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "second_brain_synapse"
version = "0.0.1"
description = "LLM-driven backend for organising and powering GTD-like Second Brain systems."
authors = [{name = "Francis Beeson", email = "leobeeson@gmail.com"}]
licence = "MIT"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"
dependencies = []
dev-dependencies = []
